--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "@quasar/extras": "^1.0.0",
     "core-js": "^3.6.5",
+    "date-fns": "^2.22.1",
     "firebase": "^7.20.0",
     "quasar": "^1.0.0"
   },
